extra space fixed

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -16,7 +16,7 @@
 
 #title {
   font-size: 4rem;
-  margin-bottom: 4rem;
+  margin-bottom: 3rem;
   z-index: 2;
   font-family: "Bonbon", cursive;
   font-weight: 600;
